--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,3 +27,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .footer-left{
     visibility: hidden;
 }
+
+.license-wrapper{
+  visibility: hidden;
+}
